Jumper Fixed

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -920,7 +920,7 @@ footer {
                 .col-xl-4 {
                     &:nth-child(2) {
                         position: relative;
-                        margin-top: -125px !important;
+                        margin-top: -150px !important;
 
                         .cursorBorder {
                             fill: $w;
